--- a/ejercicio-2.html
+++ b/ejercicio-2.html
@@ -3,7 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Subcontenedores de Colores con Bordes Negros</title>
+    <link rel="stylesheet" href="ejercicio-2.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="flex-container">
+      <div class="subcontenedor rojo">Cristian</div>
+      <div class="subcontenedor azul">Sebastian</div>
+      <div class="subcontenedor verde">Tabacco</div>
+    </div>
+  </body>
 </html>
