--- a/ejercicio-3.html
+++ b/ejercicio-3.html
@@ -3,7 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Ejercicios CSS</title>
+    <link rel="stylesheet" href="ejercicio-3.css" />
   </head>
-  <body></body>
+  <body>
+      <div class="contenedor">
+        <div class="subcontenedor rojo">Rojo</div>
+        <div class="subcontenedor azul">Azul</div>
+        <div class="subcontenedor verde">Verde</div>
+      </div>
+    </div>
+  </body>
 </html>
