--- a/ejercicio-3.html
+++ b/ejercicio-3.html
@@ -7,11 +7,10 @@
     <link rel="stylesheet" href="ejercicio-3.css" />
   </head>
   <body>
-      <div class="contenedor">
-        <div class="subcontenedor rojo">Rojo</div>
-        <div class="subcontenedor azul">Azul</div>
-        <div class="subcontenedor verde">Verde</div>
-      </div>
+    <div class="contenedor">
+      <div class="subcontenedor rojo">cristian</div>
+      <div class="subcontenedor azul">sebastian</div>
+      <div class="subcontenedor verde">tabacco</div>
     </div>
   </body>
 </html>
